Stylecheet fix should work on mobile now..

--- a/stylecheet.css
+++ b/stylecheet.css
@@ -116,8 +116,7 @@ h1 {
 .profile {
   width: 100%;
 height: 100%;
-position: absolute;
 top: 0;
 left: 0;
--webkit-backface-visibility: hidden;
+position: absolute; -webkit-backface-visibility: hidden
 }
